fixed the panel  height bug on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,6 @@ section {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   position: relative;
   background-color: transparent;
 }
@@ -190,6 +189,9 @@ section {
   font-weight: 700;
 }
 
+form {
+  position: relative;
+}
 @media (min-width: 1020px) {
   form {
     padding: 45px 80px 25px 80px;
@@ -203,6 +205,7 @@ section {
   margin-left: auto;
   margin-right: auto;
   margin-top: -80px;
+  margin-bottom: 90px;
   border-radius: 15px;
   padding: 24px 18px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -212,6 +215,7 @@ section {
     width: 100%;
     position: relative;
     margin-top: 0;
+    margin-bottom: 0;
     border-radius: 0;
     padding: 0;
     box-shadow: none;
