--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -88,7 +88,7 @@ section {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+
   position: relative;
   background-color: transparent;
 
