--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,4 +1,5 @@
 form {
+  position: relative;
   @include lg {
     padding: 45px 80px 25px 80px;
     width: 86%;
@@ -11,6 +12,7 @@ form {
   margin-left: auto;
   margin-right: auto;
   margin-top: -80px;
+  margin-bottom: 90px;
   border-radius: 15px;
   padding: 24px 18px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -19,6 +21,7 @@ form {
     width: 100%;
     position: relative;
     margin-top: 0;
+    margin-bottom: 0;
     border-radius: 0;
     padding: 0;
     box-shadow: none;
